@@ -34,6 +34,7 @@
    * `nelly03`: guard against the player changing systems in the middle of mining
    * `zbh06`: made mission easier for the player
    * `seek_n_destroy`: fixed mission being failable after the player takes out the target
+   * `preach`: don't try to claim the system twice
    * Fixed many typos
    * Translation updates
 
